<resources>
    <string name="app_name">Lunchr</string>
    <string name="title_activity_main">Lunchr</string>
    <string name="card_default_city">Cincinnati, OH</string>
    <string name="card_default_date_name">Your date\'s name</string>
    <string name="navigate_date_content_description">navigate to date location</string>
    <string name="message_date_content_description">message your date</string>
    <string name="archive_date_content_description">archive this date</string>

    <!-- Login button strings -->
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>

    <!-- Action menu strings -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- test strings -->
    <string name="sheet_item_pressed">Item pressed</string>
    <string name="create_a_date_content_description">Create a date.</string>
    <string name="search_for_dates_content_description">Search for dates.</string>
    <string name="title_activity_create_date">CreateDateActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign in</string>
    <string name="SignUp">Sign up</string>
    <string name="forward_slash">/</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="bio">Bio</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_date">Create new date</string>
    <string name="pick_a_place">Pick a place</string>
    <string name="pick_a_date">Pick a date and time</string>

</resources>
