<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_cardlist"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_card_height"
    android:layout_margin="@dimen/card_margin"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/OAuthButtonSize"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/card_action_horizontal_padding">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_with_facebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_with_facebook" />

        <Button
            android:id="@+id/login_with_twitter"
            android:text="@string/login_with_twitter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_with_google"
            android:text="@string/login_with_google"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_with_password"
        android:text="@string/login_with_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>
</android.support.v7.widget.CardView>