<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardlist_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/default_card_height"
    android:layout_margin="@dimen/card_margin"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/OAuthButtonSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/card_action_horizontal_padding">

            <ImageButton
                android:id="@+id/navigationActionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/navigate_date_content_description"
                android:src="@drawable/ic_directions_black_24dp"
                android:tint="@color/white" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_with_facebook"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_with_facebook" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:text="@string/login_with_google"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
</android.support.v7.widget.CardView>