<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uc.lunchr.ui.activities.LoginActivity">

    <TextView
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:visibility="gone" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardlist_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_card_height"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/OAuthButtonSize"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/card_action_horizontal_padding">

            <ImageButton
                android:id="@+id/login_with_facebook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/login_with_facebook"
                style="@style/Button.Facebook"/>

            <ImageButton
                android:id="@+id/login_with_twitter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/login_with_twitter"
                style="@style/Button.Twitter"/>

            <ImageButton
                android:id="@+id/login_with_google"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/login_with_google"
                style="@style/Button.Google"/>
        </LinearLayout>

        <Button
            android:id="@+id/login_with_password"
            android:background="@color/blue_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/login_with_password" />
    </android.support.v7.widget.CardView>

</LinearLayout>